@@ -23,7 +23,6 @@
 30 + 60*I,    19 + 236*I: 8.1 e-37
 30 + 60*I,  100 + 1001*I: 2.4 e-36
         0,          -100: 8.4 e-95
-   10 - I,    19 + 236*I: 9.0 e-95
 1 + 128*I,       -1/10*I: 6.2 e-95
 1 + 128*I, 1/10 - 1/10*I: 1.6 e-94
        60,           100: 2.4 e-95
@@ -57,8 +56,8 @@
 13: -79
 6.4517096605632180286130396475962100207 E-43429453
 1.0805427490386563567297010582115145985 E-14
--0.0096304981549875294045330406967324266004 + 0.0104448408245333075664155335
-90425336552*I
+-0.0096304981549875294045330406967324266080 + 0.0104448408245333075664155335
+90425336553*I
 3.6835977616820321802351926205081189877 E-46
 0.033148544714002591996135923592143390256
 [0.048900510708061119567239835228049522318, 0.003779352409848906478874860132
@@ -90,4 +89,4 @@
   ***   at top-level: eint1(0)
   ***                 ^--------
   *** eint1: domain error in eint1: x = 0
-Total time spent: 156
+Total time spent: 118
