@@ -185,6 +185,7 @@ BA137- ellsea(,,1)  could return a wrong result [#1768]
   138- rnfconductor: sanity checks were not taken into account
 MC139- memory leak in pari_close: sopath not freed
 HC140- incgam(30,60) < 0. More generally, wrong results for s >> 1 [#1689]
+HC141- excessive loss of accuracy in incgam, incgamc, eint1
 
   Added
     1- add optional argument to sumdigits to specify the base
